--- a/app/web/templates/edit_patient_info.html
+++ b/app/web/templates/edit_patient_info.html
@@ -2225,7 +2225,7 @@
                 </table>
 
                 <div class="form-group" style="margin-top: 30px;">
-                    <button type="submit" id="submit-button" class="submit-btn">この内容で保存</button>
+                    <button type="submit" id="submit-button" class="submit-btn">プレビューを確認</button>
                 </div>
             </form>
         </div>
