--- a/app/web/templates/preview_viewer.html
+++ b/app/web/templates/preview_viewer.html
@@ -7,10 +7,14 @@
     <title>Excel Preview</title>
 
     <!-- STABLE 2.1.13 -->
-    <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/luckysheet@2.1.13/dist/plugins/css/pluginsCss.css' />
+    <!-- <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/luckysheet@2.1.13/dist/plugins/css/pluginsCss.css' />
     <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/luckysheet@2.1.13/dist/plugins/plugins.css' />
     <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/luckysheet@2.1.13/dist/css/luckysheet.css' />
-    <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/luckysheet@2.1.13/dist/assets/iconfont/iconfont.css' />
+    <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/luckysheet@2.1.13/dist/assets/iconfont/iconfont.css' /> -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='lib/luckysheet/pluginsCss.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='lib/luckysheet/plugins.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='lib/luckysheet/luckysheet.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='lib/luckysheet/iconfont.css') }}">
 
     <style>
         html,
@@ -76,9 +80,12 @@
 
     <div id="luckysheet-container"></div>
 
-    <script src="https://cdn.jsdelivr.net/npm/luckysheet@2.1.13/dist/plugins/js/plugin.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/luckysheet@2.1.13/dist/plugins/js/plugin.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/luckysheet@2.1.13/dist/luckysheet.umd.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/luckyexcel/dist/luckyexcel.umd.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/luckyexcel/dist/luckyexcel.umd.js"></script> -->
+    <script src="{{ url_for('static', filename='lib/luckysheet/plugin.js') }}"></script>
+    <script src="{{ url_for('static', filename='lib/luckysheet/luckysheet.umd.js') }}"></script>
+    <script src="{{ url_for('static', filename='lib/luckysheet/luckyexcel.umd.js') }}"></script>
 
     <script>
         const base64Data = "{{ excel_base64 }}";
