--- a/app/web/templates/index.html
+++ b/app/web/templates/index.html
@@ -16,7 +16,7 @@
             <div class="user-info">
                 <span>ようこそ、<strong>{{ current_user.username }}</strong> ({{ current_user.occupation }}) さん</span>
 
-                <a href="{{ url_for('edit_patient_info') }}" class="admin-link" style="color: #17a2b8;">患者情報マスタ編集</a>
+                <a href="{{ url_for('patient.edit_patient_info') }}" class="admin-link" style="color: #17a2b8;">患者情報マスタ編集</a>
 
                 {% if current_user.role == 'admin' %}
                 <a href="{{ url_for('admin.signup') }}" class="admin-link">新規職員登録</a>
@@ -36,7 +36,7 @@
         </ul>{% endif %}
         {% endwith %}
 
-        <form id="rehab-form" action="{{ url_for('generate_plan') }}" method="post">
+        <form id="rehab-form" action="{{ url_for('plan.generate_plan') }}" method="post">
             <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
             <div class="form-group">
                 <label for="patient-select">1. 担当患者を選択</label>
