--- a/app/web/templates/regeneration_summary.html
+++ b/app/web/templates/regeneration_summary.html
@@ -22,7 +22,7 @@
     <div class="container mt-4">
         <header class="d-flex justify-content-between align-items-center">
             <h1>再生成機能 利用回数集計</h1>
-            <a href="{{ url_for('index') }}" class="btn btn-secondary">戻る</a>
+            <a href="{{ url_for('plan.index') }}" class="btn btn-secondary">戻る</a>
         </header>
 
         <div id="summary-container" class="mt-4">
