--- a/app/web/templates/signup.html
+++ b/app/web/templates/signup.html
@@ -45,7 +45,7 @@
             </div>
             <button type="submit" class="submit-btn">この内容で登録</button>
         </form>
-        <p style="text-align: center; margin-top: 20px;"><a href="{{ url_for('index') }}">トップページに戻る</a></p>
+        <p style="text-align: center; margin-top: 20px;"><a href="{{ url_for('plan.index') }}">トップページに戻る</a></p>
     </div>
 </body>
 
