--- a/app/web/templates/confirm.html
+++ b/app/web/templates/confirm.html
@@ -15,10 +15,10 @@
     <!-- <link rel="stylesheet" href="{{ url_for('static', filename='lib\bootstrap\bootstrap-icons.min.css') }}"> -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script> -->
      
-     <script src="{{ url_for('static', filename='lib\mermaid\mermaid.min.js') }}"></script>
+     <script src="{{ url_for('static', filename='lib/mermaid/mermaid.min.js') }}"></script>
 
     <!-- <script src="https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.min.js"></script> -->
-    <script src="{{ url_for('static', filename='lib\marked\marked.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='lib/marked/marked.min.js') }}"></script>
     <script>mermaid.initialize({ startOnLoad: false });</script>
 </head>
 
