--- a/app/web/templates/edit_patient_info.html
+++ b/app/web/templates/edit_patient_info.html
@@ -2617,9 +2617,9 @@
         }
     </script>
 
-    <!-- ▼▼▼ ここからFIMグラフ描画のJavaScript ▼▼▼ -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> -->
-     <script src="{{ url_for('static', filename='lib/chart/chart.js') }}"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+     <!-- <script src="{{ url_for('static', filename='lib/chart/chart.js') }}"></script> -->
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             const fimHistoryData = {{ fim_history_json | safe if fim_history_json else 'null'
